# tvdatafeed

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
tests/: README.md  conftest.py  test_auth.py  test_live.py  test_parsing.py
tvDatafeed/: consumer.py  datafeed.py  main.py  seis.py
